plugins {
    id 'application'
    id 'idea'
}

group = 'io.github.jwharm.puzzlegame'
version = '0.1'

repositories {
    mavenCentral()
}

idea {
    module {
        downloadSources = true
    }
}

dependencies {
    implementation 'io.github.jwharm.javagi:adw:0.10.0'
    implementation 'io.github.jwharm.cairobindings:cairo:1.18.3'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.register('glibCompileResources') {
    doLast {
        exec {
            workingDir 'src/main/resources'
            commandLine 'glib-compile-resources', 'game.gresource.xml'
        }
    }
}

tasks.named('classes') {
    dependsOn glibCompileResources
}

tasks.named('run', JavaExec) {
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
    jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
}

application {
    mainClass = 'io.github.jwharm.puzzlegame.Main'
}
